<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuScreen"
    android:background="@color/light_green">

    <!-- Layout constraints for the navigation window -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Top App Bar -->
        <LinearLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/dark_blue_opaque"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Navigation Menu Button -->
            <ImageView
                android:id="@+id/imageNavMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/hmp"
                android:src="@drawable/ic_nav_menu"
                app:tint="@color/white" />

            <!-- Current Fragment Name -->
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/hmp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Displays the current Fragment user interface -->
        <fragment
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/layoutToolBar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/navHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:defaultNavHost="true"
            app:navGraph="@navigation/main"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Menu is hidden until the user either swipes from the left or presses the imageNavMenu button -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/layout_navigation_header"
        app:menu="@menu/navigation_menu"
        android:background="@drawable/navbarcolor"
        android:layout_gravity="start" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <!-- Profile Picture -->
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile_picture"
                    app:riv_oval="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <!-- Username -->
                <TextView
                    android:id="@+id/navUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="username"
                    android:textColor="@color/white"
                    android:textSize="25dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Logout Button -->
        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/logout"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="15dp"
            android:textAllCaps="false"
            android:background="@drawable/buttonshape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="15dp"/>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>